change header font - orange

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ header h1{ /**name - home**/
   font-family: 'Syncopate', sans-serif;
   font-size: 100px;
   font-weight: 400;
-  color: #423554;
+  color: #EB9363;
 }
 .secondary-header h1{
   color: white;
